# Building-a-neural-network-in-Python-using-Numpy

NeuronalNetworks/: LICENSE  README.md  pyproject.toml
NeuronalNetworks/resources/: formulas.md  link_collection.md
NeuronalNetworks/src/: classes.py  main.py  utils.py
NeuronalNetworks/src/classes/: Layer.py  NeuralNetwork.py  Optimizer.py  __init__.py
NeuronalNetworks/src/utils/: OneHotEncoding.py  __init__.py  activation.py  loss.py  optimizer.py  prediction.py  weightInit.py
NeuronalNetworks/src/visual/: graphics_wheeee.py  open_mnist.py
PackagingTutorial/: pyproject.toml
